feat(rabbitmq-config): configure H2, RabbitMQ and routing
Adds configuration for:
- H2 in-memory database.
- RabbitMQ connection.
- RabbitMQ queue, exchange, and routing key.

--- a/rabbitMQ/sample2/rabbitMQ-configuration/src/main/resources/application.properties
+++ b/rabbitMQ/sample2/rabbitMQ-configuration/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=rabbitMQ-configuration
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA settings (if using Spring Data JPA)
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Enable H2 web console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# RabbitMQ settings
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+#configuration variables
+RABBITMQ.QUEUE.NAME=registration-queue-name
+RABBITMQ.EXCHANGE.NAME=registration-exchange-name
+RABBITMQ.ROUTING.KEY.NAME=registration-routing-key
