--- a/rabbitMQ/sample2/registration-service/src/main/resources/application.properties
+++ b/rabbitMQ/sample2/registration-service/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=registration-service
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA settings (if using Spring Data JPA)
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Enable H2 web console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
