feat(registration): configure RabbitMQ properties

--- a/rabbitMQ/sample2/registration-service/src/main/resources/application.properties
+++ b/rabbitMQ/sample2/registration-service/src/main/resources/application.properties
@@ -13,3 +13,14 @@ spring.jpa.show-sql=true
 # Enable H2 web console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+
+#rabbitMQ configuration properties
+rabbitmq.queue.name=queueName
+rabbitmq.topicExchange.name=topicExchangeName
+rabbitmq.routingKey.name=routingKeyName
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
