feat(notification): activate dev profile

--- a/rabbitMQ/sample2/notification-service/src/main/resources/application.properties
+++ b/rabbitMQ/sample2/notification-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active=dev
 spring.application.name=notification-service
 
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -13,4 +14,3 @@ spring.jpa.show-sql=true
 # Enable H2 web console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
