--- a/kafka/sample1/src/main/resources/application.properties
+++ b/kafka/sample1/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=sample1
+
+#kafka configuration variables
+kafka.topic.name=topicName
+kafka.group.id=groupId
+
+# Kafka Bootstrap Server
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Producer Configuration
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Consumer Configuration
+spring.kafka.consumer.group-id=demo-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
