--- a/kafka/kafka/registration-service/src/main/resources/application.properties
+++ b/kafka/kafka/registration-service/src/main/resources/application.properties
@@ -1,1 +1,31 @@
 spring.application.name=registration-service
+
+#config h2 db
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA settings (if using Spring Data JPA)
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Enable H2 web console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Kafka Common
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Kafka Producer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# Kafka Consumer
+kafka.topic.name=user-registration
+spring.kafka.consumer.group-id=registration-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
