feat(notification-service): Add kafka configuration

--- a/kafka/kafka/notification-service/src/main/resources/application.properties
+++ b/kafka/kafka/notification-service/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=notification-service
+
+server.port=8081
+
+kafka.topic.name=user-registration
+kafka.group.id=user-registration
+
+# Kafka Common
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Kafka Consumer
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.value.default.type=com.kafka.notification_service.dto.UserRegistrationEvent
+
+
+# Kafka Producer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+logging.level.org.springframework.kafka=DEBUG
+logging.level.org.apache.kafka.clients.consumer=DEBUG
