refactor(registration-service): Update kafka topic name

--- a/kafka/kafka/registration-service/src/main/resources/application.properties
+++ b/kafka/kafka/registration-service/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 
 # Kafka Consumer
 kafka.topic.name=user-registration
-spring.kafka.consumer.group-id=registration-group
+kafka.group.id=user-registration
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
